--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:700|Ubuntu:400,400i,500,700" rel="stylesheet">
 </head>
 <body>
-  <div class="loader">
+  <div id="app"></div>
+  <!-- <div class="loader">
     <span class="spinner-border text-primary"></span>
   </div>
   <div class="enc-modal enc-modal--off" role="dialog" id="encrypt-modal">
@@ -199,6 +200,6 @@
           </div>
       </section>
     </div>
-  </div>
+  </div> -->
 </body>
 </html>
